After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703152 - Crash on split when run from PiTiVi
Crash on split when run from PiTiVi
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other Linux
: Normal normal
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-26 21:21 UTC by Nicolas Dufresne (ndufresne)
Modified: 2013-09-24 16:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nicolas Dufresne (ndufresne) 2013-06-26 21:21:14 UTC
I just updated to latest of everything (26 june 17h00 EST), and hit a crash when doing a split. To reproduce:

1. Open PiTiVi
2. Import an assert
3 Add it to the time line
4. Select some location
5. Click the split

Program received signal SIGSEGV, Segmentation fault.
0x00007fffeef1789c in ges_uri_source_create_element (trksrc=0x7fff6006cd50) at ges-uri-source.c:221
221	  switch (track->type) {
Missing separate debuginfos, use: debuginfo-install at-spi2-atk-2.8.1-1.fc19.x86_64 at-spi2-core-2.8.0-1.fc19.x86_64 bzip2-libs-1.0.6-8.fc19.x86_64 clutter-gtk-1.4.4-1.fc19.x86_64 faad2-libs-2.7-4.fc19.x86_64 harfbuzz-0.9.18-3.fc19.x86_64 ibus-gtk3-1.5.2-7.fc19.x86_64 ibus-libs-1.5.2-7.fc19.x86_64 libattr-2.4.46-10.fc19.x86_64 libcap-2.22-6.fc19.x86_64 libdrm-2.4.45-1.fc19.x86_64 libpciaccess-0.13.1-3.fc19.x86_64 libwayland-client-1.1.90-0.1.20130515.fc19.x86_64 libwayland-cursor-1.1.90-0.1.20130515.fc19.x86_64 libwayland-server-1.1.90-0.1.20130515.fc19.x86_64 libxkbcommon-0.3.0-1.fc19.x86_64 mesa-dri-drivers-9.2-0.12.20130610.fc19.x86_64 mesa-libEGL-9.2-0.12.20130610.fc19.x86_64 mesa-libGL-9.2-0.12.20130610.fc19.x86_64 mesa-libgbm-9.2-0.12.20130610.fc19.x86_64 mesa-libglapi-9.2-0.12.20130610.fc19.x86_64 pcre-8.32-7.fc19.x86_64 pygobject2-2.28.6-9.fc19.x86_64 systemd-libs-204-9.fc19.x86_64 xz-libs-5.1.2-4alpha.fc19.x86_64
(gdb) print track
$1 = (GESTrack *) 0x0
(gdb) bt
  • #0 ges_uri_source_create_element
    at ges-uri-source.c line 221
  • #1 ges_track_element_create_gnl_object_func
    at ges-track-element.c line 476
  • #2 ensure_gnl_object
    at ges-track-element.c line 557
  • #3 _deep_copy
    at ges-track-element.c line 1261
  • #4 ges_timeline_element_copy
    at ges-timeline-element.c line 827
  • #5 ges_clip_split
    at ges-clip.c line 1083
  • #6 ffi_call_unix64
    at ../src/x86/unix64.S line 76

Comment 1 Thibault Saunier 2013-07-25 01:34:15 UTC
commit c1451cf48c4d6c169e9f16c450d5ffd9af3b2804
Author: Thibault Saunier <thibault.saunier@collabora.com>
Date:   Wed Jul 24 14:26:18 2013 -0400

    clip: Fix the spliting method
    
    We should make sure that the newly created trackelement are inside
    a container when adding them to as this is needed for GESUriClip-s.
    
    Also do not try to set a child property on the TrackElement itself.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=703152